--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"start": "shopify theme dev",
-	"watch": "npx tailwind -i ./assets/tailwind.css -o ./assets/application.css --watch",
-	"dev": "npm run watch & npm run start"
+    "start": "shopify theme dev --theme-editor-sync",
+    "watch": "npx tailwind -i ./assets/tailwind.css -o ./assets/application.css --watch",
+    "dev": "concurrently \"npm run start\" \"npm run watch\" "
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "tailwindcss": "^3.4.14"
+  },
+  "dependencies": {
+    "concurrently": "^9.0.1"
   }
 }
